--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,16 +2,16 @@
 es:
   activerecord:
     models:
-      libro:  "Libro"
+      product:  "Producto"
     attributes:
-      libro:
-        title:  "Titulo"
-        descrip:  "Categoria"
-        author:  "Autor"  
-        fechprestm:  "Fecha prestamo"
-        fechdevol:  "Fecha devolucion"
-        status:  "Situacion"
-        image_url: "[URL] Foto Portada"
+      product:
+        name:  "Nombre"
+        description:  "Descripcion"
+        price:  "Precio"  
+        cost:  "Costo"
+        t_schedule:  "Agenda"
+        stock:  "Stock"
+        img_url: "[URL] Foto Portada"
     errors:
       messages:
         record_invalid: 'La validación falló: %{errors}'
@@ -21,10 +21,10 @@ es:
   views:
     pagination:
       truncate: "|"
-      first: "&laquo; Inicio" 
-      last: "Fin &raquo;"
-      previous: "&lsaquo; Anterior"
-      next: "Siguiente &rsaquo;"
+      first:  "&laquo; Inicio" 
+      last:  "Fin &raquo;"
+      previous:  "&lsaquo; Anterior"
+      next:  "Siguiente &rsaquo;"
 
   helpers:
     page_entries_info:
